--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.16",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.5",
@@ -29,20 +30,22 @@
     "@storybook/addon-onboarding": "^10.0.7",
     "@storybook/addon-vitest": "^10.0.7",
     "@storybook/react-vite": "^10.0.7",
+    "@types/node": "^20.0.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/browser-playwright": "^4.0.9",
+    "@vitest/coverage-v8": "^4.0.9",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "eslint-plugin-storybook": "^10.0.7",
     "globals": "^16.4.0",
+    "playwright": "^1.56.1",
     "prop-types": "^15.8.1",
     "storybook": "^10.0.7",
+    "typescript": "^5.0.0",
     "vite": "^7.1.7",
-    "vitest": "^4.0.9",
-    "playwright": "^1.56.1",
-    "@vitest/browser-playwright": "^4.0.9",
-    "@vitest/coverage-v8": "^4.0.9"
+    "vitest": "^4.0.9"
   }
 }
